--- a/view.html
+++ b/view.html
@@ -169,7 +169,7 @@
         }
 
         reload();
-        //setInterval(reload, 1000);
+        setInterval(reload, 1000);
     </script>
 </body>
 </html>
