--- a/view.html
+++ b/view.html
@@ -81,7 +81,7 @@
             const prefix = verticalRectangle + " ";
             prefixSpan.href = getStackFrameUrl(stack[stack.length - 1]);
             prefixSpan.target = "_blank";
-            prefixSpan.style.color = "gray";
+            prefixSpan.style.color = "lightgray";
             prefixSpan.innerHTML = prefix;
             div.appendChild(prefixSpan);
         
